# radio-golha

./: .gitignore  Makefile  output.txt  package-lock.json  package.json  test_artist.mjs
.gemini/: rules.md
admin/: .cta.json  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
core/: Cargo.toml  README.md
core-node/: Cargo.toml
core/adapters/android/: Cargo.toml
core/adapters/android/src/: lib.rs
core/adapters/electron/: Cargo.toml
core/adapters/electron/src/: main.rs
core/adapters/ios/: Cargo.toml  radiogolha_ios.h
core/adapters/ios/src/: lib.rs
core/adapters/macos/: Cargo.toml
core/adapters/macos/src/: main.rs
core/adapters/node/: Cargo.toml
core/adapters/node/src/: lib.rs
core/adapters/tauri/: Cargo.toml
core/adapters/tauri/src/: lib.rs
core/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  queries.rs  user_data.rs
core/tests/: smoke.rs
data/: programmes.json  programmes_by_category.json
docs/: ADMIN_ARCHITECTURE.md  ADMIN_RUST_CORE_CONTRACT.md  ADMIN_RUST_CORE_MIGRATION.md  ANDROID_SIGNED_RELEASE.md  ANDROID_TV_FOCUS_RULES.md  ARTIST_AVATAR_PROMPT.md  MAC_DESKTOP_DESIGN_WORKFLOW.md  MOBILE_KMP_RUNBOOK.md  MOBILE_NAVIGATION.md  PROGRAM_ARTIST_LINKING.md  TRACK_DISPLAY_GUIDELINES.md  db_schema_renderer.html  project_specification.md
electron-desktop-app/: package.json  pnpm-lock.yaml
mac-desktop-app/: Package.swift  README.md
mobile/: README.md  gradle.properties  settings.gradle.kts
scraper/: bulk_programme_scraper.py  debug_1204.py  download_audio_archive.py  final_clean_and_validate.py  index_scraper.py  (+13 more)
(+4595 files in other folders)
