[package]
name = "radiogolha-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "radiogolha_core"
path = "src/lib.rs"

[[bin]]
name = "radiogolha-core-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
