[package]
name = "radiogolha-macos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "radiogolha-macos-bridge-cli"
path = "src/main.rs"

[dependencies]
radiogolha-core = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
